--- a/backend/templates/posts/edit.html
+++ b/backend/templates/posts/edit.html
@@ -91,7 +91,7 @@
 	      </a>	      
 	      {% endif %}
 	      
-	      {% endif %}
+	      {% endif %} <!-- end if post -->
 	      <button class="btn btn-primary" type="submit">
 		Save
 	      </button>
