--- a/backend/templates/posts/post-detail.html
+++ b/backend/templates/posts/post-detail.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12 post-detail">
-      {% include "posts/post.html" %}
+      {% include "posts/post.html" with truncate=False %}
       <br/>
       {% include "elements/subscription-box.html" %}
       <br/>
