--- a/backend/static/styles/sass/_header.scss
+++ b/backend/static/styles/sass/_header.scss
@@ -131,14 +131,12 @@ header {
 .subnav {
     background-color: rgba(255, 255, 255, 0.33);
     box-shadow: 0 1px 0 0 rgba(0,0,0,.05), 0 2px 4px 0 rgba(0,0,0,.06);
-    height:38px;
     .filters {
-	@media  (max-width: 740px) {
-	    padding: 0;
-	    margin: 0;
+	@media  (max-width: 420px) {
+	    width: 100%;
 	}	    
-	
     }
+
     .btn {
 	border-radius: 0;
 	border: none;
@@ -178,9 +176,6 @@ header {
 	    color: $gray;
 	    /* Click behind it into the input */
 	    pointer-events: none;
-	    @media  (max-width: 740px) {
-		right: 8px;
-	    }
 	}
 
 	.typeahead.dropdown-menu {
@@ -198,10 +193,6 @@ header {
     li {
 	border-bottom: 1px solid rgba(0,0,0,.15);
     }
-
-    @media  (max-width: 740px) {
-	margin: 0;
-    }	    
 }
 
 
