--- a/backend/static/styles/sass/_general.scss
+++ b/backend/static/styles/sass/_general.scss
@@ -1,6 +1,7 @@
 html, body {
     font-family: "Open Sans", sans-serif;
     background: $background;
+    /* background: #f6f3ea; */
     color: $black;
 }
 
@@ -58,8 +59,6 @@ textarea, textarea:focus, textarea:active {
     resize: none;
     box-shadow: none!important;    
 }
-
-
 
 
 /* Customize bootstrap */
