--- a/backend/static/styles/sass/style.scss
+++ b/backend/static/styles/sass/style.scss
@@ -1,11 +1,8 @@
-/* 
-@import "../fonts/opensans.scss";
-@import "../fonts/noto-sans.scss";
+/* Vendor */
 @import "../vendor/bootstrap.min.scss";
-@import "../vendor/simplemde.min.scss";
 @import "../vendor/font-awesome.min.scss";
 @import "../vendor/foundation-icons.scss";
- */
+
 $background: #f9f9f9;
 $orange: #f66303; /* #da552f; */
 $blue:#008cba;
