--- a/backend/static/styles/vendor.css
+++ b/backend/static/styles/vendor.css
@@ -9904,8 +9904,8 @@ span.CodeMirror-selectedtext {
  */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../fonts/fontawesome-webfont.eot");
-  src: url("../fonts/fontawesome-webfont.eot") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2") format("woff2"), url("../fonts/fontawesome-webfont.woff") format("woff"), url("../fonts/fontawesome-webfont.ttf") format("truetype"), url("../fonts/fontawesome-webfont.svg") format("svg");
+  src: url("./fonts/fontawesome-webfont.eot");
+  src: url("./fonts/fontawesome-webfont.eot") format("embedded-opentype"), url("./fonts/fontawesome-webfont.woff2") format("woff2"), url("./fonts/fontawesome-webfont.woff") format("woff"), url("./fonts/fontawesome-webfont.ttf") format("truetype"), url("./fonts/fontawesome-webfont.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -13539,8 +13539,8 @@ span.CodeMirror-selectedtext {
  */
 @font-face {
   font-family: "foundation-icons";
-  src: url("../fonts/foundation-icons.eot");
-  src: url("../fonts/foundation-icons.eot?#iefix") format("embedded-opentype"), url("../fonts/foundation-icons.woff") format("woff"), url("../fonts/foundation-icons.ttf") format("truetype"), url("../fonts/foundation-icons.svg#fontcustom") format("svg");
+  src: url("./fonts/foundation-icons.eot");
+  src: url("./fonts/foundation-icons.eot?#iefix") format("embedded-opentype"), url("./fonts/foundation-icons.woff") format("woff"), url("./fonts/foundation-icons.ttf") format("truetype"), url("./fonts/foundation-icons.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
