--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -9,9 +9,7 @@
   {% include "elements/meta.html" %}  
 
   <!-- Styles -->
-  <!-- <link rel="stylesheet" href="{% static "/styles/vendor.css" %}"> -->
-  <!-- <link rel="stylesheet" href="{% static "/styles/style.css" %}"> -->
-  <script src="{% static "/js/dist/fictionhub.js" %}"></script>
+  <link rel="stylesheet" href="{% static "/styles/style.css" %}">
 
 </head>
 
@@ -48,6 +46,7 @@
   <!-- <script src="{% static "/js/scripts.js" %}"></script> -->
   <!-- <script src="{% static "/js/voting.js" %}"></script> -->
   <!-- <script src="{% static "/js/comments.js" %}"></script>     -->
-
+  <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
+  <link rel="stylesheet" href="{% static "/styles/vendor/simplemde.min.css" %}" async>
 </body>
 </html>
