--- a/backend/static/styles/sass/_general.scss
+++ b/backend/static/styles/sass/_general.scss
@@ -26,13 +26,13 @@ h4 {
     font-weight: bold;		
 }
 
-p {
-    font-size: 1.1em;
+article p {
+    font-size: 1.5em;
     margin-bottom:20px;
 }
 
-li {
-    font-size: 1.1em;
+article li {
+    font-size: 1.5em;
 }
 
 
@@ -62,6 +62,10 @@ textarea, textarea:focus, textarea:active {
 
 
 /* Customize bootstrap */
+
+.container {
+    max-width: 900px;
+}
 .btn-default {
     border-radius: 2px;
     background: transparent;
