--- a/backend/static/styles/style.css
+++ b/backend/static/styles/style.css
@@ -14489,14 +14489,14 @@ h4 {
 }
 
 /* line 29, sass/_general.scss */
-p {
-  font-size: 1.1em;
+article p {
+  font-size: 1.5em;
   margin-bottom: 20px;
 }
 
 /* line 34, sass/_general.scss */
-li {
-  font-size: 1.1em;
+article li {
+  font-size: 1.5em;
 }
 
 /* line 39, sass/_general.scss */
@@ -14529,7 +14529,12 @@ textarea, textarea:focus, textarea:active {
 }
 
 /* Customize bootstrap */
-/* line 65, sass/_general.scss */
+/* line 66, sass/_general.scss */
+.container {
+  max-width: 900px;
+}
+
+/* line 69, sass/_general.scss */
 .btn-default {
   border-radius: 2px;
   background: transparent;
@@ -14537,28 +14542,28 @@ textarea, textarea:focus, textarea:active {
   border: 1px solid #999;
 }
 
-/* line 72, sass/_general.scss */
+/* line 76, sass/_general.scss */
 .btn-cta, .btn-cta-large {
   background: #f66303;
   border: none;
   color: white;
 }
-/* line 76, sass/_general.scss */
+/* line 80, sass/_general.scss */
 .btn-cta:hover, .btn-cta-large:hover {
   color: white;
 }
 
-/* line 81, sass/_general.scss */
+/* line 85, sass/_general.scss */
 .btn-cta-large {
   padding: 15px 20px;
 }
 
-/* line 87, sass/_general.scss */
+/* line 91, sass/_general.scss */
 .form-control, .form-control-cta {
   height: 40px;
 }
 
-/* line 91, sass/_general.scss */
+/* line 95, sass/_general.scss */
 .form-control-cta {
   height: auto;
   padding: 12px 15px;
@@ -14566,18 +14571,18 @@ textarea, textarea:focus, textarea:active {
   text-align: center;
 }
 
-/* line 99, sass/_general.scss */
+/* line 103, sass/_general.scss */
 .close {
   margin: 20px;
 }
 
 /* centered columns styles */
-/* line 103, sass/_general.scss */
+/* line 107, sass/_general.scss */
 .row-centered {
   text-align: center;
 }
 
-/* line 106, sass/_general.scss */
+/* line 110, sass/_general.scss */
 .col-centered {
   display: inline-block;
   float: none;
@@ -14849,15 +14854,21 @@ article .toc {
   float: none;
   text-align: center;
 }
-/* line 29, sass/_posts.scss */
+@media (max-width: 500px) {
+  /* line 22, sass/_posts.scss */
+  article .toc {
+    width: 100%;
+  }
+}
+/* line 32, sass/_posts.scss */
 article .toc .btn {
   width: 100%;
 }
-/* line 32, sass/_posts.scss */
+/* line 35, sass/_posts.scss */
 article .toc .active {
   font-weight: bold !important;
 }
-/* line 36, sass/_posts.scss */
+/* line 39, sass/_posts.scss */
 article .post-footer {
   font-size: 14px;
   color: #999;
@@ -14868,31 +14879,31 @@ article .post-footer {
   border-top: 1px solid #e8e8e8;
   /* Buttons/Voting */
 }
-/* line 45, sass/_posts.scss */
+/* line 48, sass/_posts.scss */
 article .post-footer .label {
   margin-right: 4px;
 }
-/* line 49, sass/_posts.scss */
+/* line 52, sass/_posts.scss */
 article .post-footer .btn {
   padding: 2px 8px;
   margin-right: 5px;
   float: left;
 }
-/* line 53, sass/_posts.scss */
+/* line 56, sass/_posts.scss */
 article .post-footer .btn:hover {
   background: #e7e7e7;
 }
-/* line 58, sass/_posts.scss */
+/* line 61, sass/_posts.scss */
 article .post-footer .fi-arrow-up:before {
   transform: scale(1.2, 1);
 }
-/* line 61, sass/_posts.scss */
+/* line 64, sass/_posts.scss */
 article .post-footer .upvoted {
   background: #f66303;
   color: white;
   border: none;
 }
-/* line 69, sass/_posts.scss */
+/* line 72, sass/_posts.scss */
 article .subtitle {
   color: rgba(0, 0, 0, 0.44) !important;
   font-weight: normal !important;
@@ -14903,12 +14914,12 @@ article .subtitle {
   article {
     padding: 10px;
   }
-  /* line 78, sass/_posts.scss */
+  /* line 81, sass/_posts.scss */
   article .post-footer {
     margin: 5px -10px -10px -10px;
     width: calc(100% + 20px);
   }
-  /* line 82, sass/_posts.scss */
+  /* line 85, sass/_posts.scss */
   article h1 {
     line-height: 45px;
   }
@@ -14917,28 +14928,28 @@ article .subtitle {
 @media (max-width: 768px) {
   padding: 0;
 }
-/* line 93, sass/_posts.scss */
+/* line 96, sass/_posts.scss */
 .post-detail article {
   border: none;
   padding: 40px 40px 20px 40px;
 }
 
-/* line 100, sass/_posts.scss */
+/* line 103, sass/_posts.scss */
 .tag-description {
   margin-top: 20px;
 }
-/* line 102, sass/_posts.scss */
+/* line 105, sass/_posts.scss */
 .tag-description .panel {
   padding: 20px;
   margin-bottom: 0;
 }
-/* line 106, sass/_posts.scss */
+/* line 109, sass/_posts.scss */
 .tag-description .panel h1 {
   font-weight: bold;
   font-size: 20px;
   margin-top: 0;
 }
-/* line 111, sass/_posts.scss */
+/* line 114, sass/_posts.scss */
 .tag-description .panel h2 {
   font-weight: normal;
   font-size: 18px;
@@ -14946,88 +14957,88 @@ article .subtitle {
 }
 
 /* Post detail */
-/* line 122, sass/_posts.scss */
+/* line 125, sass/_posts.scss */
 .comment {
   box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.04);
   min-height: 0;
   padding: 20px;
 }
-/* line 126, sass/_posts.scss */
+/* line 129, sass/_posts.scss */
 .comment .footer {
   float: right;
 }
-/* line 128, sass/_posts.scss */
+/* line 131, sass/_posts.scss */
 .comment .footer a {
   cursor: pointer;
 }
-/* line 131, sass/_posts.scss */
+/* line 134, sass/_posts.scss */
 .comment .footer .score {
   font-weight: bold;
 }
-/* line 135, sass/_posts.scss */
+/* line 138, sass/_posts.scss */
 .comment .footer .comment-upvoted {
   color: #f66303;
 }
 
-/* line 142, sass/_posts.scss */
+/* line 145, sass/_posts.scss */
 .comment .comment {
   margin-right: -20.5px;
 }
 
-/* line 148, sass/_posts.scss */
+/* line 151, sass/_posts.scss */
 .editor {
   padding-top: 20px;
   position: relative;
   /* SimpleMDE */
   /* No gap between category and tags */
 }
-/* line 152, sass/_posts.scss */
+/* line 155, sass/_posts.scss */
 .editor .dropdown {
   z-index: 10;
 }
-/* line 154, sass/_posts.scss */
+/* line 157, sass/_posts.scss */
 .editor .dropdown .dropdown-menu {
   box-sizing: border-box;
   width: 100%;
 }
-/* line 160, sass/_posts.scss */
+/* line 163, sass/_posts.scss */
 .editor .chapters {
   position: absolute;
   right: 10px;
   top: 26px;
   z-index: 10;
 }
-/* line 165, sass/_posts.scss */
+/* line 168, sass/_posts.scss */
 .editor .chapters .chapter-title {
   width: 220px;
   text-align: left;
 }
-/* line 170, sass/_posts.scss */
+/* line 173, sass/_posts.scss */
 .editor .chapters .nulis {
   margin-right: 5px;
   float: left;
 }
-/* line 176, sass/_posts.scss */
+/* line 179, sass/_posts.scss */
 .editor .editor-toolbar {
   border-radius: 0;
   background: white;
 }
-/* line 180, sass/_posts.scss */
+/* line 183, sass/_posts.scss */
 .editor .CodeMirror {
   border-radius: 0;
   border-bottom: none;
 }
-/* line 184, sass/_posts.scss */
+/* line 187, sass/_posts.scss */
 .editor .editor-statusbar {
   border: 1px solid #ddd;
 }
-/* line 189, sass/_posts.scss */
+/* line 192, sass/_posts.scss */
 .editor .col-sm-3, .editor .col-sm-9 {
   padding: 0;
 }
 
 /* Messages */
-/* line 196, sass/_posts.scss */
+/* line 199, sass/_posts.scss */
 .message p {
   font-size: 16px;
 }
