--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -22,6 +22,9 @@ article {
     .toc {
 	display: block;
 	width: calc(100% - 170px);
+	@media (max-width: 500px) {
+	    width: 100%;	    
+	}
 	margin-left: auto;
 	margin-right: auto;
 	float: none;
