--- a/backend/static_serve/styles/sass/_posts.scss
+++ b/backend/static_serve/styles/sass/_posts.scss
@@ -19,7 +19,23 @@ article {
 	font-size: 12px;
 	color: rgba(0, 0, 0, 0.44);
     }
-
+    .toc {
+	display: block;
+	width: calc(100% - 170px);
+	@media (max-width: 500px) {
+	    width: 100%;	    
+	}
+	margin-left: auto;
+	margin-right: auto;
+	float: none;
+	text-align: center;
+	.btn {
+	    width: 100%;
+	}
+	.active {
+	    font-weight:bold!important;
+	}
+    }
     .post-footer {
 	font-size: 14px;
 	color: $gray;
@@ -143,11 +159,16 @@ article {
 	    width: 100%;
 	}
     }
+
     .chapters {
 	position: absolute;
 	right: 10px;
 	top:26px;
 	z-index:10;
+	.chapter-title {
+	    width: 220px;
+	    text-align:left;
+	}
 
 	.nulis {
 	    margin-right: 5px;
