--- a/backend/templates/posts/post.html
+++ b/backend/templates/posts/post.html
@@ -20,7 +20,7 @@
       {{post|title|striptags}}
     </span>
     <ul class="dropdown-menu dropdown-menu-right" role="menu">    
-      {% for child in post.parent.children.all %}	  	      
+      {% for child in post.series.children.all %}	  	      
       <li>
 	<a href="{{child.get_absolute_url}}"
 	   {% if child == post %}
