--- a/backend/templates/posts/post.html
+++ b/backend/templates/posts/post.html
@@ -6,7 +6,7 @@
   
   <div class="clearfix"></div>
   <!-- Chapters -->
-  {% if post.parent and not truncate %}
+  {% if post.series and not truncate %}
   <!-- 
   <span class="btn btn-default left">
     < Prev
