--- a/backend/static/styles/sass/style.scss
+++ b/backend/static/styles/sass/style.scss
@@ -1,7 +1,7 @@
 /* Vendor */
-@import "../vendor/bootstrap.min.scss";
-@import "../vendor/font-awesome.min.scss";
-@import "../vendor/foundation-icons.scss";
+/* @import "../vendor/bootstrap.min.scss"; */
+/* @import "../vendor/font-awesome.min.scss"; */
+/* @import "../vendor/foundation-icons.scss"; */
 
 $background: #f9f9f9;
 $orange: #f66303; /* #da552f; */
