--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -9,6 +9,7 @@
   {% include "elements/meta.html" %}  
 
   <!-- Styles -->
+  <link rel="stylesheet" href="{% static "/styles/vendor.css" %}">  
   <link rel="stylesheet" href="{% static "/styles/style.css" %}">
 
 </head>
