--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -27,12 +27,12 @@ h4 {
 }
 
 article p {
-    font-size: 1.5em;
+    font-size: 22px;
     margin-bottom:20px;
 }
 
 article li {
-    font-size: 1.5em;
+    font-size: 22px;
 }
 
 
