--- a/backend/templates/pages/about.html
+++ b/backend/templates/pages/about.html
@@ -15,25 +15,25 @@
 	  Join
 	</a>
 	{% endif %}
-	<p> The goal of this website is to make it easy for writers to find their audience, and for readers to discover great fiction.</p>
+	<p> The goal of this website is to make it easy for writers to find their audience, and make it easy for readers to discover awesome fiction.</p>
 	<h2>Publish your stories</h2>
-	<p>Use our great tools to publish your stories.
-	  Distraction-free writing(side by side?).</p>
-	<p>[Editor screenshot]</p>
+	<p>Use our great distraction-free editor to write and publish your stories.</p>
+	<!-- <p>[Editor screenshot]</p> -->
 	<h2>Find your audience</h2>
-	<p> Best stories will be will be featured on our front page,  shared with our&nbsp;<a href="https://twitter.com/fictionhub">twitter followers</a>, and sent to all of our subscribers in the weekly email digest.</p>
-	<p>[something screenshot]</p>
-	<p>build your following and receive view</p>
+	<p> Fiction Hub makes it easy for readers to discover your stories, and the best stories are featured on our front page, shared with our&nbsp;<a href="https://twitter.com/fictionhub">twitter followers</a>, and sent to all of our subscribers in the weekly email digest.</p>
+	<p>As you build your audience, you will have more and more readers following you and receiving updates on your stories.</p>
+	<!-- <p>[something screenshot]</p> -->
+	<!-- <p>build your following and receive view</p> -->
 	<h2>Receive great feedback</h2>
-	<p> You will find feedback and great writing tools and other value props.</p>
-	<p>[Comments and feedback]</p>
+	<p> Fiction Hub is a great community of authors who share their experience, and help each other to get better at writing.</p>
+	<!-- <p>[Comments and feedback]</p> -->
 	<h2>Become a better writer</h2>
-	<p>we also have tools that will help you become a better writer - daily streaks and wordcounts</p>
-	<p> Leaderboard </p>
-	<p>[Leaderboard and metrics]</p>
-	<p> Talk to great writers and receive advice on our discussion forum </p>
-	<p>[Discussion]</p>
-	<p> Writing resources </p>
+	<p>We also have a great set of tools that will help you to become a better writer. Useful statistics will show you the calendar of your daily wordcount, and help you to develop regular writin habits.</p>
+	<p> Our <a href="/leaderboard">leaderboard</a> prominently displays the best authors, so you can make writing more fun by competing with others. </p>
+	<p> We have a Daily Practice section - a category that is not displayed in the main browse view, allwoing you to share your daily writing, without any pressure.</p>
+	<!-- <p>[Leaderboard and metrics]</p> -->
+	<h2> Writing resources </h2>
+	<p> If you're new, you can check out our <a href="/on-writing">learning resources for aspiring writers</a> that will help you to take your first steps on your journey to becoming an amazing fiction writer. </p>
 	<p> Come over and join our growing community! </p>
 	<!-- Competitions -->
 	<!-- Marketplace -->
