--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -19,6 +19,14 @@ article {
 	font-size: 12px;
 	color: rgba(0, 0, 0, 0.44);
     }
+
+    .prev, .next {
+	margin-top: -38.5px;
+	@media (max-width: 500px) {
+	    width: 50%;
+	    margin-top: 4px;
+	}
+    }
     .toc {
 	display: block;
 	width: calc(100% - 170px);
@@ -66,7 +74,24 @@ article {
 	    color: white;
 	    border: none;
 	}	    
-	
+
+	.actions {
+	    float: right;
+	    @media (max-width: 600px) {
+		float: left;
+		margin-top: 10px;
+	    }
+	    .btn {
+		@media (max-width: 600px) {
+		    margin-right: 2px;
+		}
+	    }
+	}
+	.col-xs-12, .col-sm-6 {
+	    @media (max-width: 700px) {
+		padding: 0;
+	    }
+	}
     }
 
     .subtitle {
@@ -165,6 +190,9 @@ article {
 	.dropdown-menu {
 	    box-sizing: border-box;
 	    width: 100%;
+	    .active {
+		font-weight:bold!important;
+	    }
 	}
     }
 
