--- a/backend/templates/elements/login.html
+++ b/backend/templates/elements/login.html
@@ -37,7 +37,7 @@
 
 		<!-- Submit -->
 		<button type="submit"
-			class="btn btn-primary right">
+			class="btn btn-cta right">
 		  Join
 		</button>
 	      </form>
@@ -66,7 +66,7 @@
 
 		<!-- Submit -->
 		<button type="submit"
-			class="btn btn-primary right">
+			class="btn btn-cta right">
 		  Login
 		</button>
 	      </form>
