--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -20,16 +20,24 @@ article {
 	color: rgba(0, 0, 0, 0.44);
     }
 
+    .prev {
+	margin-left: -10px;	    
+    }
+    .next {
+	margin-right: -10px;	    
+    }
+    
     .prev, .next {
 	margin-top: -38.5px;
 	@media (max-width: 500px) {
 	    width: 50%;
+	    margin: 0;
 	    margin-top: 4px;
 	}
     }
     .toc {
 	display: block;
-	width: calc(100% - 170px);
+	width: calc(100% - 150px);
 	@media (max-width: 500px) {
 	    width: 100%;	    
 	}
