--- a/backend/static/styles/style.css
+++ b/backend/static/styles/style.css
@@ -556,40 +556,49 @@ article .read-more {
   color: rgba(0, 0, 0, 0.44);
 }
 /* line 23, sass/_posts.scss */
+article .prev {
+  margin-left: -10px;
+}
+/* line 26, sass/_posts.scss */
+article .next {
+  margin-right: -10px;
+}
+/* line 30, sass/_posts.scss */
 article .prev, article .next {
   margin-top: -38.5px;
 }
 @media (max-width: 500px) {
-  /* line 23, sass/_posts.scss */
+  /* line 30, sass/_posts.scss */
   article .prev, article .next {
     width: 50%;
+    margin: 0;
     margin-top: 4px;
   }
 }
-/* line 30, sass/_posts.scss */
+/* line 38, sass/_posts.scss */
 article .toc {
   display: block;
-  width: calc(100% - 170px);
+  width: calc(100% - 150px);
   margin-left: auto;
   margin-right: auto;
   float: none;
   text-align: center;
 }
 @media (max-width: 500px) {
-  /* line 30, sass/_posts.scss */
+  /* line 38, sass/_posts.scss */
   article .toc {
     width: 100%;
   }
 }
-/* line 40, sass/_posts.scss */
+/* line 48, sass/_posts.scss */
 article .toc .btn {
   width: 100%;
 }
-/* line 43, sass/_posts.scss */
+/* line 51, sass/_posts.scss */
 article .toc .active {
   font-weight: bold !important;
 }
-/* line 47, sass/_posts.scss */
+/* line 55, sass/_posts.scss */
 article .post-footer {
   font-size: 14px;
   color: #999;
@@ -600,54 +609,54 @@ article .post-footer {
   border-top: 1px solid #e8e8e8;
   /* Buttons/Voting */
 }
-/* line 56, sass/_posts.scss */
+/* line 64, sass/_posts.scss */
 article .post-footer .label {
   margin-right: 4px;
 }
-/* line 60, sass/_posts.scss */
+/* line 68, sass/_posts.scss */
 article .post-footer .btn {
   padding: 2px 8px;
   margin-right: 5px;
   float: left;
 }
-/* line 64, sass/_posts.scss */
+/* line 72, sass/_posts.scss */
 article .post-footer .btn:hover {
   background: #e7e7e7;
 }
-/* line 69, sass/_posts.scss */
+/* line 77, sass/_posts.scss */
 article .post-footer .fi-arrow-up:before {
   transform: scale(1.2, 1);
 }
-/* line 72, sass/_posts.scss */
+/* line 80, sass/_posts.scss */
 article .post-footer .upvoted {
   background: #f66303;
   color: white;
   border: none;
 }
-/* line 78, sass/_posts.scss */
+/* line 86, sass/_posts.scss */
 article .post-footer .actions {
   float: right;
 }
 @media (max-width: 600px) {
-  /* line 78, sass/_posts.scss */
+  /* line 86, sass/_posts.scss */
   article .post-footer .actions {
     float: left;
     margin-top: 10px;
   }
 }
 @media (max-width: 600px) {
-  /* line 84, sass/_posts.scss */
+  /* line 92, sass/_posts.scss */
   article .post-footer .actions .btn {
     margin-right: 2px;
   }
 }
 @media (max-width: 700px) {
-  /* line 90, sass/_posts.scss */
+  /* line 98, sass/_posts.scss */
   article .post-footer .col-xs-12, article .post-footer .col-sm-6 {
     padding: 0;
   }
 }
-/* line 97, sass/_posts.scss */
+/* line 105, sass/_posts.scss */
 article .subtitle {
   color: rgba(0, 0, 0, 0.44) !important;
   font-weight: normal !important;
@@ -658,12 +667,12 @@ article .subtitle {
   article {
     padding: 10px;
   }
-  /* line 106, sass/_posts.scss */
+  /* line 114, sass/_posts.scss */
   article .post-footer {
     margin: 5px -10px -10px -10px;
     width: calc(100% + 20px);
   }
-  /* line 110, sass/_posts.scss */
+  /* line 118, sass/_posts.scss */
   article h1 {
     line-height: 45px;
   }
@@ -672,39 +681,39 @@ article .subtitle {
 @media (max-width: 768px) {
   padding: 0;
 }
-/* line 121, sass/_posts.scss */
+/* line 129, sass/_posts.scss */
 .post-detail article {
   border: none;
   padding: 40px 40px 20px 40px;
 }
 @media (max-width: 768px) {
-  /* line 121, sass/_posts.scss */
+  /* line 129, sass/_posts.scss */
   .post-detail article {
     padding: 10px;
   }
-  /* line 127, sass/_posts.scss */
+  /* line 135, sass/_posts.scss */
   .post-detail article .post-footer {
     margin: 5px -10px -10px -10px;
     width: calc(100% + 20px);
   }
 }
 
-/* line 136, sass/_posts.scss */
+/* line 144, sass/_posts.scss */
 .tag-description {
   margin-top: 20px;
 }
-/* line 138, sass/_posts.scss */
+/* line 146, sass/_posts.scss */
 .tag-description .panel {
   padding: 20px;
   margin-bottom: 0;
 }
-/* line 142, sass/_posts.scss */
+/* line 150, sass/_posts.scss */
 .tag-description .panel h1 {
   font-weight: bold;
   font-size: 20px;
   margin-top: 0;
 }
-/* line 147, sass/_posts.scss */
+/* line 155, sass/_posts.scss */
 .tag-description .panel h2 {
   font-weight: normal;
   font-size: 18px;
@@ -712,92 +721,92 @@ article .subtitle {
 }
 
 /* Post detail */
-/* line 158, sass/_posts.scss */
+/* line 166, sass/_posts.scss */
 .comment {
   box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.04);
   min-height: 0;
   padding: 20px;
 }
-/* line 162, sass/_posts.scss */
+/* line 170, sass/_posts.scss */
 .comment .footer {
   float: right;
 }
-/* line 164, sass/_posts.scss */
+/* line 172, sass/_posts.scss */
 .comment .footer a {
   cursor: pointer;
 }
-/* line 167, sass/_posts.scss */
+/* line 175, sass/_posts.scss */
 .comment .footer .score {
   font-weight: bold;
 }
-/* line 171, sass/_posts.scss */
+/* line 179, sass/_posts.scss */
 .comment .footer .comment-upvoted {
   color: #f66303;
 }
 
-/* line 178, sass/_posts.scss */
+/* line 186, sass/_posts.scss */
 .comment .comment {
   margin-right: -20.5px;
 }
 
-/* line 184, sass/_posts.scss */
+/* line 192, sass/_posts.scss */
 .editor {
   padding-top: 20px;
   position: relative;
   /* SimpleMDE */
   /* No gap between category and tags */
 }
-/* line 188, sass/_posts.scss */
+/* line 196, sass/_posts.scss */
 .editor .dropdown {
   z-index: 10;
 }
-/* line 190, sass/_posts.scss */
+/* line 198, sass/_posts.scss */
 .editor .dropdown .dropdown-menu {
   box-sizing: border-box;
   width: 100%;
 }
-/* line 193, sass/_posts.scss */
+/* line 201, sass/_posts.scss */
 .editor .dropdown .dropdown-menu .active {
   font-weight: bold !important;
 }
-/* line 199, sass/_posts.scss */
+/* line 207, sass/_posts.scss */
 .editor .chapters {
   position: absolute;
   right: 10px;
   top: 26px;
   z-index: 10;
 }
-/* line 204, sass/_posts.scss */
+/* line 212, sass/_posts.scss */
 .editor .chapters .chapter-title {
   width: 220px;
   text-align: left;
 }
-/* line 209, sass/_posts.scss */
+/* line 217, sass/_posts.scss */
 .editor .chapters .nulis {
   margin-right: 5px;
   float: left;
 }
-/* line 215, sass/_posts.scss */
+/* line 223, sass/_posts.scss */
 .editor .editor-toolbar {
   border-radius: 0;
   background: white;
 }
-/* line 219, sass/_posts.scss */
+/* line 227, sass/_posts.scss */
 .editor .CodeMirror {
   border-radius: 0;
   border-bottom: none;
 }
-/* line 223, sass/_posts.scss */
+/* line 231, sass/_posts.scss */
 .editor .editor-statusbar {
   border: 1px solid #ddd;
 }
-/* line 228, sass/_posts.scss */
+/* line 236, sass/_posts.scss */
 .editor .col-sm-3, .editor .col-sm-9 {
   padding: 0;
 }
 
 /* Messages */
-/* line 235, sass/_posts.scss */
+/* line 243, sass/_posts.scss */
 .message p {
   font-size: 16px;
 }
